@@ -1177,8 +1177,9 @@ dba.load <- function(file='DBA', dir='.', pre='dba_', ext='RData')
       } else {
          minOverlap <- res$minOverlap
       }
-      contrasts <- res$contrasts
-      called    <- res$called
+      contrasts  <- res$contrasts
+      called     <- res$called
+      attributes <- res$attributes
       for(i in 1:length(res$peaks)) {
          if(is.factor(res$peaks[[i]][,1])) {
             res$peaks[[i]][,1] <- as.character(res$peaks[[i]][,1])
@@ -1186,8 +1187,9 @@ dba.load <- function(file='DBA', dir='.', pre='dba_', ext='RData')
       }
       res <- pv.vectors(res,minOverlap=minOverlap,bAllSame=pv.allSame(res),
                         merge=is.null(res$merged))
-      res$contrasts <- contrasts
-      res$called    <- called
+      res$contrasts  <- contrasts
+      res$called     <- called
+      res$attributes <- attributes
    }
    
    if(is.null(res$config$DataType)) {
@@ -1216,6 +1218,10 @@ dba.load <- function(file='DBA', dir='.', pre='dba_', ext='RData')
    }
    if(is.null(res$config$AnalysisMethod)){
       res$config$AnalysisMethod=DBA_DESEQ2
+   }
+   
+   if(class(res$attributes) == "function") {
+      res$attributes <- NULL
    }
    
    if(is.null(res$bCorPlot)){
